# OOSToolkit

./: .gitignore  CMakeLists.txt  Readme.md  custom_animation.py  docs.md  geometry_animation.py  make_and_compile.sh  package-lock.json  package.json  plan_10k_satellites.md  visualize_satellites.py
.cache/clangd/index/: Exact_methods.cpp.7C88B408D6CCC821.idx  LambertSolver.cpp.08B432D92E07B7B1.idx  LambertSolver.cpp.44B57755976352B9.idx  LambertSolver.hpp.6CF7A330FC315C25.idx  LambertSolver.hpp.B4981C7085C402B0.idx  Local_search.cpp.2567E9B59EAFD273.idx  Local_search.cpp.BA6131733FB99563.idx  Local_search.hpp.1D7255CC8D0C2D09.idx  Local_search.hpp.433B09FD353D8EDD.idx  Nbody.cpp.7F2D6405BDA5FC22.idx  Nbody.cpp.A74A391C2506A5CF.idx  Nbody.hpp.2307E78FF46F7989.idx  Nbody.hpp.AF55CA17C7EC0722.idx  Sim.cpp.C1C5A26DC4D4C00F.idx  Sim.cpp.C3CC489318B1CAD9.idx  Trajectory_selection.cpp.3D658ACAF6A3B7C4.idx  Trajectory_selection.cpp.667AAAF5B5FCE3DC.idx  Trajectory_selection.hpp.28EC2270C9667254.idx  Trajectory_selection.hpp.51B330C8C66B0DC2.idx  data_access_lib.cpp.098CC93E82ED5E4B.idx  data_access_lib.cpp.65C935AAEE564306.idx  data_access_lib.hpp.42920BA237AE2190.idx  data_access_lib.hpp.C2B8C179989B8224.idx
.opencode/plans/: exact_methods_fix_plan.md
Plotting_scripts/: AnimatedResults.py  EnhancedAnimatedResults.py  PlottingContours.py  README_visualization.md  plotting_results.py  plotting_tradeoff.py  scaling_comparison.py
data/: Trajectories.csv  WalkerDelta.csv
docs/: important_functions.md
include/: Casadi_trial.hpp  DP.hpp  Exact_methods.hpp  LambertSolver.hpp  Local_search.hpp  LowThrustAnalytical.hpp  Nbody.hpp  Simulated_Annealing.hpp  Tabu_search.hpp  Trajectory_selection.hpp  VNS.hpp  data_access_lib.hpp
plotting_scripts/: AnimatedResults.py  plotting_tradeoff.py
raan_study/: J2_test.py  catchuptime_j2.py  network.py  raanrate.py
src/: DP.cpp  Exact_methods.cpp  Exact_methods.cpp.backup  LambertSolver.cpp  Local_search.cpp  Local_search.cpp.bak  LowThrustAnalytical.cpp  Nbody.cpp  Qlaw.cpp  RunSim.cpp  Sim.cpp  Simulated_Annealing.cpp  Solver_trial.cpp  Tabu_search.cpp  Trajectory_selection.cpp  VNS.cpp  VNS.cpp.backup  claude_di_carlo.cpp  data_access_lib.cpp
